Add Hex logo :)

--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,9 @@ knitr::opts_chunk$set(
 )
 ```
 
-# toWin
+
+
+# toWin <img src="hex_toWin.png" align="right" width="120" />
 
 Convert windows file paths into R friendly ones. Not more not less.
 
